# scnn

./: .gitignore  CLAUDE.md  COMPUTER_USE_SETUP.md  PHASE1_PHASE2_FINAL_REPORT.md  README.md  computer_use_agent.py  install_agentworld.sh  pure_airllm.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/mcp_server/: server.py  tracker.py
.claude/skills/auto-handoff/: SKILL.md
.claude/skills/handoff/: SKILL.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: git_helper.sh
src/virtual_hid/: __init__.py  _core.py  _vkeys.py  accessibility.py  agent.py  ax_ui_element.py  keyboard.py  live_feed.py  mcp_server.py  mouse.py  ocr.py  screen.py  ui_interactor.py  windows.py
src/virtual_hid/cli/: __main__.py
stale_tests/: test_cg_debug.py  test_cg_debug2.py  test_cg_event.py  test_hid_inject.py  test_hid_simple.py  test_minimal_hid.py  virtual_hid_cli.py  virtual_hid_original.py
tests/: test_cli.py  test_keyboard.py  test_live_feed.py  test_mouse.py  test_ui_interactor.py  test_vkeys.py
